Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17312

Info about EmacsKeys plugin is too long in version dialog

XMLWordPrintable

    • 34aa8e9e1 (master)

      Start QtCreator with parameter "-version".
      It will display a version dialog. This dialog is too large, it doesn't even fit on an UltraHD screen. Especially the info about the EmacsKeys plugin seems much too long:

      The whole dialog and each plugin's info should have a reasonable size.

        1. emacs.png
          92 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes